# visual-reasoning-playground

./: .gitignore  .replit  DEVICE_COMPATIBILITY.md  README.md  SEO-AUDIT-AND-RECOMMENDATIONS.md  app.json  design_guidelines.md  eas.json  index.html  package-lock.json  package.json  pyproject.toml  replit.md  server.py  tsconfig.json
.sisyphus/: boulder.json
00-visual-reasoning-harness/: README.md
01-scene-describer/: README.md  app.js  index.html
02-detection-boxes/: README.md  app.js  index.html
03-gesture-obs/: README.md  app.js  index.html  moondream-gesture-control.py  obs-client.js
04-scoreboard-extractor/: README.md  app.js  index.html  lower-third.html
04-smart-counter/: README.md  app.js  index.html
04b-scoreboard-ocr/: app.js  index.html  ocr-engine.js  score-parser.js
05-color-assistant/: README.md  app.js  index.html  ptz-color-controller.js
05-framing-assistant/: README.md  app.js  index.html  ptz-controller.js
05-scene-analyzer/: README.md  app.js  index.html
05-smart-counter/: README.md  index.html
06-scene-analyzer/: README.md  app.js
06-zone-monitor/: README.md  app.js  index.html
07-color-assistant/: README.md  app.js  index.html
07-multimodal-studio/: README.md  app.js  command-handler.js  index.html  obs-controller.js  ptz-controller.js
07-zone-monitor/: README.md
08-framing-assistant/: app.js  index.html  ptz-controller.js
08-multimodal-fusion/: README.md  app.js  index.html
09-ptz-color-tuner/: README.md  app.js  index.html  ptz-color-controller.js
09-smart-photographer/: app.js  index.html
backend/: main.py  (+1 more)
(+233 files in other folders)
